[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = "Following the tutorial from https://fastapi.tiangolo.com/tutorial/"
authors = ["Ryagg <58631455+Ryagg@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
